--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,3 +61,16 @@ header {
     margin-bottom: 90px;
     color: #ffffff;
 }
+
+.list-inline-item:not(:last-child) {
+    margin-right: 0rem;
+  }
+
+  .menucontainer {
+    font-size: 0;
+  }
+
+  #nav li {
+    font-size: 14px;
+    padding: 0;
+  }
