--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@ h1,h2,h3,h4 {
     color: #fafafa;
 }
 
+.inline-block {
+    display: inline-block;
+}
+
 /* --------------------------------------------------------------------- Heading */
 
 header {
@@ -128,7 +132,7 @@ header {
   }
 
 
-  /* --------------------------------------------------------------------- Hover.css */
+/* --------------------------------------------------------------------- Hover.css */
 
 
   .hvr-sweep-to-bottom:before {
@@ -144,4 +148,47 @@ footer {
     color: #fafafa;
     min-height: 120px;
     margin: 0;
+}
+
+.cv-pdf i {
+    font-size: 18px;
+    color: #fafafa;
+    text-align: center;
+    padding-left: 5px;
+    transition: all 0.5 ease-in-out;
+    -moz-transition: all 0.5 ease-in-out;
+    -webkit-transition: all 0.5 ease-in-out;
+    -o-transition: all 0.5 ease-in-out;
+}
+
+.cv-pdf i:hover {
+    color: #e84610;
+}
+
+.social-links {
+    padding-bottom: 15px;
+}
+
+.social-links li a i {
+    width: 32px;
+    height: 32px;
+    padding: 12px 0;
+    border-radius: 50%;
+    font-size: 13px;
+    line-height: 7px;
+    text-align: center;
+    color: #fafafa;
+    background: #8f8f8f;
+    transition: all 0.5 ease-in-out;
+    -moz-transition: all 0.5 ease-in-out;
+    -webkit-transition: all 0.5 ease-in-out;
+    -o-transition: all 0.5 ease-in-out;
+}
+
+.social-links li a i:hover {
+    background: #e84610;
+}
+
+#footer-details {
+    padding: 20px;
 }
