--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,3 +268,27 @@ footer {
     width: 60%;
     position: relative;
 }
+
+
+/* --------------------------------------------------------------------- Skills */
+
+.progress {
+    position: relative;
+    height: 30px;
+    margin-bottom: 4px;
+}
+
+.progress-type {
+    position: absolute;
+    width: 18%;
+    height: 30px;
+    left: 0px;
+    font-weight: 600;
+    padding: 14px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25,25,25,0.2);
+}
+
+.progress-section {
+    margin: 40px 20px;
+}
