--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,10 @@
     background-color: #f4f4f4;
 }
 
+.bg-color-work-history {
+    background-color: #9b59b6;
+}
+
 
 
 /* --------------------------------------------------------------------- Special paddings/margins/text */
@@ -64,6 +68,7 @@ h1,h2,h3,h4 {
     float: none;
 }
 
+.history-heading,
 .section-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
@@ -157,15 +162,12 @@ header {
     letter-spacing: 2px;
   }
 
-
 /* --------------------------------------------------------------------- Hover.css */
-
 
   .hvr-sweep-to-bottom:before {
     background: rgba(0,0,0,0.2);
     height: 120px;
   }
-
 
 /* --------------------------------------------------------------------- Footer */
 
@@ -219,7 +221,6 @@ footer {
     padding: 20px;
 }
 
-
 /* --------------------------------------------------------------------- Three Reasons */
 
 .three-reasons-icon {
@@ -231,8 +232,6 @@ footer {
     margin-bottom: 15px;
 
 }
-
-
 
 /* --------------------------------------------------------------------- Personal Info */
 
@@ -269,7 +268,6 @@ footer {
     position: relative;
 }
 
-
 /* --------------------------------------------------------------------- Skills */
 
 .progress {
@@ -291,4 +289,52 @@ footer {
 
 .progress-section {
     margin: 40px 20px;
+}
+
+/* --------------------------------------------------------------------- Work History */
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
+.timeline-item {
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo", sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background: #fafafa;
+}
+
+.history-items {
+    margin-bottom: 30px;
 }
